# mcr-ptm-annotator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  example_mcrA.fasta
mcr_ptm_annotator/: __init__.py  annotator.py  ptm_database.py  report.py  utils.py
tests/: test_annotator.py
