[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcr-ptm-annotator"
version = "0.1.0"
description = "Annotate McrA protein sequences with known post-translational modification sites"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["MCR", "PTM", "archaea", "methanogenesis", "Methanosarcina", "post-translational modification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/CameronPiepkorn/mcr-ptm-annotator"
"Bug Tracker" = "https://github.com/CameronPiepkorn/mcr-ptm-annotator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcr_ptm_annotator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
